# WineAgent

./: .dokerignore  .gitignore  Dockerfile  pyproject.toml
src/: app.py  main.py
src/agent/: Agent.py  __init__.py
src/function_calls/: AddToCart.py  ClearCart.py  Handover.py  SearchWinePriceList.py  ShowCart.py  __init__.py  cart_storage.py
src/search_index/: create_search_index.py  get_search_index.py
